refactor: create cred with code flow in auth-direct example

--- a/examples/sdk/auth-direct/src/globals.css
+++ b/examples/sdk/auth-direct/src/globals.css
@@ -22,5 +22,5 @@ body {
 }
 
 .input {
-  @apply shadow appearance-none border rounded w-full py-3 px-3 text-gray-700 leading-tight focus:outline-none
+  @apply shadow appearance-none border rounded flex-grow py-3 px-3 text-gray-700 leading-tight focus:outline-none
 }
